fix logo left spacing in navbar

--- a/qtify/src/components/Logo/logo.css
+++ b/qtify/src/components/Logo/logo.css
@@ -1,4 +1,4 @@
 .logo{
-    margin-right: 8px;
+    margin-left: 8px;
     height: 40px;
 }
